openshift/route-config.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    application: spring-training
  name: spring-training
spec:
  to:
    kind: Service
    name: spring-training
    weight: 100
